# sharda

./: .gitignore  CMakeLists.txt  README.md
doc/: implementation.md  method.md
doc/data/eg1/: README.md
recipe/: build.sh  meta.yaml
resources/example_resources/eg1/: evaluation.md  example_region.fasta  example_region.fasta.fai  example_region_del_het.fa  example_region_del_het.fa.fai  example_sample_truth.fa  example_sample_truth.fa.fai
resources/example_resources/eg1/results/: del_hap_R1.fq  del_hap_R2.fq  example_reads.coord.bam  example_reads.coord.bam.bai  example_reads.namesorted.bam  example_reads.raw.bam  example_reads_R1.fq  example_reads_R2.fq  ref_hap_R1.fq  ref_hap_R2.fq
src/: main.cpp
src/assembly/: anchor_chain.cpp  anchor_chain.h  flow_decomp.cpp  flow_decomp.h  graph_cleaner.cpp  graph_cleaner.h  read_adder.cpp  read_adder.h  read_classifier.cpp  read_classifier.h  region_assembler.cpp  region_assembler.h
src/graph/: backbone.cpp  backbone.h  dbg.cpp  dbg.h  types.h  unitig_graph.cpp  unitig_graph.h
src/io/: bam_reader.cpp  bam_reader.h  bed_reader.cpp  bed_reader.h  fasta_reader.cpp  fasta_reader.h  fasta_writer.cpp  fasta_writer.h  gfa_writer.cpp  gfa_writer.h
src/util/: kmer.cpp  kmer.h  log.h
tests/: test_all.cpp
